Change List.of to Collections.singletonList to avoid red herring in profiles